' Generated by UML Generator
' Encoded: nLVVRziW47xFN-57PrsgFLjJjIpTfaZP5ZNLNgOz47nnKMsm05TBg-vl7zZ61aD-D8ssfpZStSVntGSS7uH4N5P5FXBtX9Q8eoB2EH9YAYKdwqh273Ew8eyGlHlTaHGYJ3ZEOJIglQBl9T1fIMQCRaWMFOsYw0AL91udZMKv7pqRrncIa35Ea7AMdEKvy3fWWerX1Vo1O4XwrtP4UqqqTW0ZFXm-rg6O0xASBI-Lx0s8ab41dwWaSlk-CrtfIBQMGDL494sY1QFP8V-SQ58r1mlrDJ0YB2kKaqVKuxsDJiaASb8GYlQbzOEHjFPTLm8ZlcJy6olM769Q_oJHIjMu3WmasiNCM4eo5kFw9udcL7a13mHrbLvobbPOic6XotQyAzJI7UZAx0F4Xs93DPvt19leFindorYEhBdZFYYvOzjVyLVaU7u5EF1To9839kmhsZ8-LNNGVvBecbNh7Fn0VxitjJSvwcztSZsIWi2Sb0gPsiC3pHdF2gZiKj236y1tQAQAtm0i64RvjPh_bXHW2qy4rjaeBWCvJ-lwDJbUY7h0OlP1KTbwjXoEhLIr_ovghSZhVfrUk6qByE42jPjoR7EZGNPkra4IDOKwl2FHfD1OF9fTYCysuGrjBkKQpNNQLoCNt5H7XFUJi3rsLjP0UeVICN9qHQv7X6JutX5YlPuRoDIid0Kq5phJ_xNScfthbRaTzhQo5RdIw_NbrGoxP0IKOMZPgupEQH-J0zKR8ZMmpMej_SwuuperUY0gRxv16A9vPxw1aWaY6T_M-lYp8JJzk6qerhSG8bInEyyeK_-HEEeARK5USdzQgHczdYapUmkr68qClgWjgIQzlKFqXCEzlNq7ZLoVSnBasE_dMfpuQ8Z3FPsZZy1zxjZFrhCvgA4RsiZvF_LaJi5AJsD9I7YdrNOmOtpaP1QpBz20tpm5UgnnRzsX2Tlyufxkb1nUhv1pzcohKYEl6LETGC6cPPaJjG1rNpSlkoT5Y2JuEIhKeHCZdWcJpCzVtdsx4-iMX1JDMQQUbX9-omL3QNtP6uJGK_7DPEA_2qEEbvTNrYuCl4Kqql3b4N3JE5sf-cwMMT5Tc9lTo3iUjJcuMJpFSFOEJc231lr2ymqTdKL-09fMHVuN
' URL: http://www.plantuml.com/plantuml/uml/nLVVRziW47xFN-57PrsgFLjJjIpTfaZP5ZNLNgOz47nnKMsm05TBg-vl7zZ61aD-D8ssfpZStSVntGSS7uH4N5P5FXBtX9Q8eoB2EH9YAYKdwqh273Ew8eyGlHlTaHGYJ3ZEOJIglQBl9T1fIMQCRaWMFOsYw0AL91udZMKv7pqRrncIa35Ea7AMdEKvy3fWWerX1Vo1O4XwrtP4UqqqTW0ZFXm-rg6O0xASBI-Lx0s8ab41dwWaSlk-CrtfIBQMGDL494sY1QFP8V-SQ58r1mlrDJ0YB2kKaqVKuxsDJiaASb8GYlQbzOEHjFPTLm8ZlcJy6olM769Q_oJHIjMu3WmasiNCM4eo5kFw9udcL7a13mHrbLvobbPOic6XotQyAzJI7UZAx0F4Xs93DPvt19leFindorYEhBdZFYYvOzjVyLVaU7u5EF1To9839kmhsZ8-LNNGVvBecbNh7Fn0VxitjJSvwcztSZsIWi2Sb0gPsiC3pHdF2gZiKj236y1tQAQAtm0i64RvjPh_bXHW2qy4rjaeBWCvJ-lwDJbUY7h0OlP1KTbwjXoEhLIr_ovghSZhVfrUk6qByE42jPjoR7EZGNPkra4IDOKwl2FHfD1OF9fTYCysuGrjBkKQpNNQLoCNt5H7XFUJi3rsLjP0UeVICN9qHQv7X6JutX5YlPuRoDIid0Kq5phJ_xNScfthbRaTzhQo5RdIw_NbrGoxP0IKOMZPgupEQH-J0zKR8ZMmpMej_SwuuperUY0gRxv16A9vPxw1aWaY6T_M-lYp8JJzk6qerhSG8bInEyyeK_-HEEeARK5USdzQgHczdYapUmkr68qClgWjgIQzlKFqXCEzlNq7ZLoVSnBasE_dMfpuQ8Z3FPsZZy1zxjZFrhCvgA4RsiZvF_LaJi5AJsD9I7YdrNOmOtpaP1QpBz20tpm5UgnnRzsX2Tlyufxkb1nUhv1pzcohKYEl6LETGC6cPPaJjG1rNpSlkoT5Y2JuEIhKeHCZdWcJpCzVtdsx4-iMX1JDMQQUbX9-omL3QNtP6uJGK_7DPEA_2qEEbvTNrYuCl4Kqql3b4N3JE5sf-cwMMT5Tc9lTo3iUjJcuMJpFSFOEJc231lr2ymqTdKL-09fMHVuN
' Generated on: 2025-11-09T18:07:36.997096400

@startuml
skinparam classAttributeIconSize 0
hide circle

class OpenApiConfig {
  +api(): OpenAPI
}

class CategoriaController {
  -categoriaService: CategoriaService
  --
  +CategoriaController(categoriaService: CategoriaService)
  +crear(categoria: Categoria): ResponseEntity<Categoria>
  +obtener(id: Long): ResponseEntity<Categoria>
  +listar(): List<Categoria>
  +actualizar(id: Long, categoria: Categoria): ResponseEntity<Categoria>
  +eliminar(id: Long): ResponseEntity<Void>
  +buscarPorNombre(nombre: String): List<Categoria>
  +buscarPorCodigo(codigo: Integer): List<Categoria>
}

class ProductoController {
  -productoService: ProductoService
  --
  +ProductoController(productoService: ProductoService)
  +crear(categoriaId: Long, producto: Producto): ResponseEntity<Producto>
  +obtener(id: Long): ResponseEntity<Producto>
  +listar(): List<Producto>
  +actualizar(id: Long, categoriaId: Long, producto: Producto): ResponseEntity<Producto>
  +eliminar(id: Long): ResponseEntity<Void>
  +buscarPorNombre(nombre: String): List<Producto>
  +buscarPorPrecioMayorA(precio: Double): List<Producto>
}

class Categoria {
  -id: Long
  -nombre: String
  -descripcion: String
  -codigo: Integer
  -descuento: Double
  -fechaCreacion: LocalDateTime
  -productos: List<Producto>
  --
  +getId(): Long
  +setId(id: Long): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getDescripcion(): String
  +setDescripcion(descripcion: String): void
  +getCodigo(): Integer
  +setCodigo(codigo: Integer): void
  +getDescuento(): Double
  +setDescuento(descuento: Double): void
  +getFechaCreacion(): LocalDateTime
  +setFechaCreacion(fechaCreacion: LocalDateTime): void
  +getProductos(): List<Producto>
  +setProductos(productos: List<Producto>): void
}

class Producto {
  -id: Long
  -nombre: String
  -precio: Double
  -stock: Integer
  -fechaRegistro: LocalDateTime
  -categoria: Categoria
  --
  +getId(): Long
  +setId(id: Long): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): Double
  +setPrecio(precio: Double): void
  +getStock(): Integer
  +setStock(stock: Integer): void
  +getFechaRegistro(): LocalDateTime
  +setFechaRegistro(fechaRegistro: LocalDateTime): void
  +getCategoria(): Categoria
  +setCategoria(categoria: Categoria): void
}

interface ICategoriaRepository {
  ~findByNombreContainingIgnoreCase(nombre: String): List<Categoria>
  ~findByCodigo(codigo: Integer): List<Categoria>
}

interface IProductoRepository {
  ~findByNombreContainingIgnoreCase(nombre: String): List<Producto>
  ~findByPrecioGreaterThan(precio: Double): List<Producto>
}

class CategoriaService {
  -categoriaRepository: ICategoriaRepository
  --
  +CategoriaService(categoriaRepository: ICategoriaRepository)
  +crear(categoria: Categoria): Categoria
  +obtener(id: Long): Categoria
  +listar(): List<Categoria>
  +actualizar(id: Long, categoria: Categoria): Categoria
  +eliminar(id: Long): void
  +buscarPorNombre(nombre: String): List<Categoria>
  +buscarPorCodigo(codigo: Integer): List<Categoria>
}

class ProductoService {
  -productoRepository: IProductoRepository
  -categoriaRepository: ICategoriaRepository
  --
  +ProductoService(productoRepository: IProductoRepository, categoriaRepository: ICategoriaRepository)
  +crear(producto: Producto, categoriaId: Long): Producto
  +obtener(id: Long): Producto
  +listar(): List<Producto>
  +actualizar(id: Long, producto: Producto, categoriaId: Long): Producto
  +eliminar(id: Long): void
  +buscarPorNombre(nombre: String): List<Producto>
  +buscarPorPrecioMayorA(precio: Double): List<Producto>
}

class SpringbootDemoApplication {
  +{static} main(args: String[]): void
}

class SpringbootDemoApplicationTests {
  ~contextLoads(): void
}

CategoriaController *-- CategoriaService
CategoriaController ..> Categoria
ProductoController *-- ProductoService
ProductoController ..> Producto
Categoria o-- Producto
Producto *-- Categoria
CategoriaService *-- ICategoriaRepository
CategoriaService ..> Categoria
ProductoService *-- IProductoRepository
ProductoService *-- ICategoriaRepository
ProductoService ..> Producto
@enduml@@